--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="sign_up">Sign Up</string>
     <string name="promt_name">Name</string>
     <string name="re_type_password">Re-type Password</string>
+    <string name="err_name_empty">Name could not be empty</string>
+    <string name="err_pass_leght">Password should at least 6 letters</string>
+    <string name="err_email_invalid">Email is empty or invalid</string>
+    <string name="err_pass_not_match">Password is not matched</string>
 </resources>
