--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="err_email_invalid">Email is empty or invalid</string>
     <string name="err_pass_not_match">Password is not matched</string>
     <string name="forget_password">Forget password?</string>
+    <string name="new_post">New Post</string>
 </resources>
