--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="don_t_have_account_signup_now">Don\'t have account? Signup Now</string>
     <string name="sign_up">Sign Up</string>
     <string name="promt_name">Name</string>
-    <string name="re_type_password">Re-type Password</string>
+    <string name="re_type_password">Re-userType Password</string>
     <string name="err_name_empty">Name could not be empty</string>
     <string name="err_pass_leght">Password should at least 6 letters</string>
     <string name="err_email_invalid">Email is empty or invalid</string>
