--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,17 @@
     <string name="tab_notification">Notification</string>
     <string name="tab_bookmark">Bookmark</string>
     <string name="tab_ic_nav">Navigation</string>
+    <string name="IGMUR_CLIENT_ID">68ca56255d3dcc6</string>
 
     <!--Item post-->
+
+    <!--Drawer Nav-->
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    
+    <!--Right menu-->
+    <string name="sign_in">Sign in</string>
+    <string name="sign_out">Sign out</string>
+    <string name="setting">Setting</string>
+    
 </resources>
